--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,8 @@
 	Options +FollowSymLinks
     RewriteEngine On
 
-    
-	ErrorDocument 404 /404.php
+	RewriteCond %{REQUEST_FILENAME} !-f  
+	RewriteCond %{REQUEST_FILENAME} !-d  
+	RewriteRule ^(.*)$ index.php/$1
+
 </IfModule>
